Reconfigure server resolution

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<script src="modules/moment.js/js/moment-with-locales.js" crossorigin="anonymous"></script>
 		<script type="text/javascript">
 			var ctx = "";
-			var baseaddress = "../ref/api/";
+			var baseaddress = "../referral-system/api/";
 			var relativeaddress = "";
 			
 			var dataEdit = function(cell) {
