--- a/userTest.html
+++ b/userTest.html
@@ -99,7 +99,7 @@
             });
             qrcode.clear();
 
-            var baseaddress = "../ref/api/";
+            var baseaddress = "../referral-system/api/";
             var baseconfig = {
                 "async": false,
                 "url": baseaddress,
